@@ -153,6 +153,7 @@ void main_window_update_bookmarks();
 void main_context_fill( PtkFileBrowser* file_browser, XSetContext* c );
 void set_panel_focus( FMMainWindow* main_window, PtkFileBrowser* file_browser );
 void focus_panel( GtkMenuItem* item, gpointer mw, int p );
+void main_window_open_path_in_current_tab( FMMainWindow* main_window, const char* path );
 
 
 G_END_DECLS
